k8s/authelia/authelia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: kubernetes-dashboard
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: authelia
          image: authelia/authelia:4.36.0
          ports:
            - containerPort: 9091
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: authelia-secret

---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: kubernetes-dashboard
  labels:
    app: authelia
spec:
  ports:
    - port: 9091
      targetPort: 9091
      protocol: TCP
      name: http
  selector:
    app: authelia
